--- a/index.html
+++ b/index.html
@@ -13,12 +13,36 @@
     <script src="libraries/p5.min.js"></script>
     <script src="libraries/p5.sound.min.js"></script>
   </head>
-
+  <style>
+    /* square div for theme picker */
+    .theme-div {
+        margin:0px;
+        margin-top:15px;
+        margin-left:auto;
+        margin-right:auto;
+        text-align:center;
+    }
+    /* square for theme-picker */
+    .square-theme {
+        height:50px;
+        width:50px;
+        margin-left:auto;
+        margin-right:auto;
+        border: 1px solid black;
+        background-color:transparent;
+        position:relative;
+        display:inline-block;
+    }
+  </style>
   <body>
     <div>
       <h1 style="text-align:center;">Drawing Game</h1>
       <h4 style="text-align:center;font-weight:lighter;">Random Color From Palette Will Be Chosen</h4>
       <script src="sketch.js"></script>
+    </div>
+    
+    <div class="theme-div">
+      <a href="https://playing-tictactoe.netlify.app/"><div style="background-size:cover;background-position:center;background-image:url('tictactoe.PNG');" class="square-theme"></div></a>
     </div>
     
   </body>
