--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         display:inline-block;
     }
   </style>
-  <body style='position:relative;overflow-x:hidden;width:100%;'>
+  <body style='position:relative;overflow-x:hidden;overflow-y:hidden;width:100%;'>
     <div>
       <h1 style="text-align:center;">Drawing Game</h1>
       <h4 style="text-align:center;font-weight:lighter;">Random Color From Palette Will Be Chosen</h4>
