--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     
     <div class="theme-div">
       <a href="https://playing-tictactoe.netlify.app/"><div style="background-size:cover;background-position:center;background-image:url('tictactoe.PNG');" class="square-theme"></div></a>
+      <a href="https://playing-connect-4.netlify.app/"><div style="background-size:cover;background-position:center;background-image:url('playing-something.PNG');" class="square-theme"></div></a>
     </div>
     
   </body>
